@@ -37,9 +37,7 @@ NabiServer* nabi_server = NULL;
 static void
 on_realize(GtkWidget *widget, gpointer data)
 {
-    nabi_server_start(nabi_server,
-		      GDK_WINDOW_XDISPLAY(widget->window),
-		      GDK_WINDOW_XWINDOW(widget->window));
+    nabi_server_start(nabi_server, widget);
 }
 
 static void
